...
      listSheet: 'home-expenses-sheet',
      listDay: 'home-expense-day',
      listRow: 'home-expense-row',
      newTransactionButton: 'home-new-expense-button',
      newTransactionSheet: 'home-new-expense-sheet',
      categoryRow: 'home-category',
      categorySheet: 'category-expenses-sheet',
      categoryPrevMonth: 'category-expenses-prev-month',
      categoryPeriod: 'category-expenses-period',
      categoryNextMonth: 'category-expenses-next-month',
      categoryTotal: 'category-expenses-total',
      categorySort: 'category-expenses-sort',
      categoryDay: 'category-expense-day',
      categoryRowItem: 'category-expense-row',
      categoryEdit: 'category-expenses-edit',
...
